kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongoclient
    version: latest
  name: mongoclient
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoclient
  template:
    metadata:
      labels:
        app: mongoclient
    spec:
      containers:
        - name: mongoclient
          image: ghcr.io/kyoobit/tornado-mongoclient:latest
          args:
            - --verbose
          ports:
            - containerPort: 8888
              name: "mongoclient"
