kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongoclient
  namespace: mongodb
spec:
  selector:
    app: mongoclient
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
