kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoclient
  namespace: mongodb
spec:
  rules:
    - host: mongoclient.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongoclient
                port:
                  number: 8888
